--- a/src/app/features/booked-rooms/booked-rooms.component.html
+++ b/src/app/features/booked-rooms/booked-rooms.component.html
@@ -1,1 +1,19 @@
-<p>booked-rooms works!</p>
+<div class="main-container">
+    <table>
+        <thead>
+            <tr>
+                <td>Hotel</td>
+                <td>Room</td>
+                <td>Customer</td>
+                <td>Status</td>
+                <td>Check-in</td>
+                <td>Check-out</td>
+                <td>Total Price</td>
+                <td>Actions</td>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table>    
+</div>
